mdapipkg/objects/Staging_Cvent_Transaction_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Value_Mapping__c</fullName>
        <label>Bank Account Value Mapping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_General_Ledger_Account_Text__c</fullName>
        <label>Bank General Ledger Account Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Currency</label>
        <referenceTo>c2g__codaDimension4__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Account_Mapping_Formula__c</fullName>
        <formula>If ( Passthrough_Formula__c = True,  Pay_To_Chapter__c , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Account Mapping Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <formula>(-1)*( Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_General_Ledger_Account_Formula__c</fullName>
        <formula>If (Passthrough_Formula__c = True, &quot;20 - A/P General&quot;,  Sales_Revenue_General_Ledger_Account__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit General Ledger Account Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Event_Id__c</fullName>
        <label>Cvent Event Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Transaction_Detail__c</fullName>
        <label>Cvent Transaction Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Transaction_Id__c</fullName>
        <label>Cvent Transaction Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account_Line_Type__c</fullName>
        <label>General Ledger Account Line Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Number__c</fullName>
        <formula>Staging_Cvent_Transaction_Header__r.Journal_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journal Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type_Formula__c</fullName>
        <formula>If (Passthrough_Formula__c = True, &quot;Account - Vendor&quot;, &quot;General Ledger Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passthrough_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passthrough Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_To_Chapter__c</fullName>
        <label>Pay To Chapter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_2__c</fullName>
        <label>Payment Type 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Currency_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Currency Mapping</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Revenue_General_Ledger_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Revenue General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staging_Cvent_Transaction_Header__c</fullName>
        <label>Staging Cvent Transaction Header</label>
        <referenceTo>Staging_Cvent_Transaction_Header__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Detail</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Staging Cvent Transaction Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Staging_Cvent_Transaction_Details</fullName>
        <columns>NAME</columns>
        <columns>Staging_Cvent_Transaction_Header__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Budget_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/4/2018</value>
        </filters>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/10/2018</value>
        </filters>
        <label>Staging Cvent Transaction Details</label>
    </listViews>
    <nameField>
        <label>Staging Cvent Transaction Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Cvent Transaction Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>